<resources>
    <string name="app_name">MagmaTask</string>
    <string name="copied">Copied</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="remaining">Remaining</string>
    <string name="images">Images</string>
    <string name="accepted">Accepted</string>
    <string name="records">Records</string>
    <string name="rejected">Rejected</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>

</resources>
