<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="responseResource"
            type="com.ghiath.magmatask.vo.Resource"/>

        <variable name="retryCallback"
            type="com.ghiath.magmatask.common.RetryCallback"/>
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <RelativeLayout
            android:id="@+id/header_lay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            >

            <TextView
                android:id="@+id/remaining_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/remaining"

                android:layout_centerVertical="true"

                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Large"

                android:textColor="@color/gray_notification_txt"

                android:textStyle="bold"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="9dp"
                android:maxLines="2"


                />
            <TextView
                android:id="@+id/done_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/done"

                android:layout_centerVertical="true"

                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.Large"

                android:textColor="@color/gray_notification_txt"

                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="9dp"
                android:maxLines="2"



                />


        </RelativeLayout>
        <View
            android:id="@+id/header_v"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/header_lay"

            android:background="@color/gray_border"/>
        <LinearLayout
android:layout_below="@id/header_v"
            android:id="@+id/balance_rel"
            android:layout_width="match_parent"
            android:layout_height="86dp"

            android:background="@color/gray_home_border"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"

            android:orientation="horizontal"
            android:weightSum="9"
            android:padding="6dp"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/gray_border_white_solid_6dp"
                android:padding="2dp"
                android:layout_marginEnd="8dp">
            <TextView
                android:id="@+id/images_count_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                app:layout_constraintStart_toStartOf="parent"

                android:text="000000"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="top|center_horizontal"
                android:lines="1"

                android:textStyle="bold"/>
            <TextView
                android:id="@+id/images_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/images"
                android:textColor="@color/darj_gray_home_text"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="center_horizontal"


                android:maxLines="1"

                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/gray_border_white_solid_6dp"
                android:layout_marginEnd="8dp"
                android:padding="2dp">
            <TextView
                android:id="@+id/records_count_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                app:layout_constraintStart_toStartOf="parent"

                android:text="000000"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="top|center_horizontal"
                android:lines="1"

                android:textStyle="bold"/>
            <TextView
                android:id="@+id/records_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/records"
                android:textColor="@color/darj_gray_home_text"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="center_horizontal"


                android:maxLines="1"

                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/gray_border_white_solid_6dp"
                android:padding="2dp"
                android:layout_marginEnd="8dp">
            <TextView
                android:id="@+id/accepted_count_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                app:layout_constraintStart_toStartOf="parent"

                android:text="000000"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="top|center_horizontal"
                android:lines="1"

                android:textStyle="bold"/>
            <TextView
                android:id="@+id/accepted_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/accepted"
                android:textColor="@color/green"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="center_horizontal"


                android:maxLines="1"

                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/gray_border_white_solid_6dp"
                android:layout_marginEnd="8dp"
                android:padding="2dp">
            <TextView
                android:id="@+id/rejected_count_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                app:layout_constraintStart_toStartOf="parent"

                android:text="000000"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="top|center_horizontal"
                android:lines="1"

                android:textStyle="bold"/>
            <TextView
                android:id="@+id/rejected_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:layout_constraintStart_toStartOf="parent"

                android:text="@string/rejected"
                android:textColor="@color/red"
                android:textAppearance="@style/TextAppearance.Small"


                android:gravity="center_horizontal"


                android:maxLines="1"

                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>


        </LinearLayout>


<!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
<!--            android:id="@+id/mSwipeRefreshLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <androidx.core.widget.NestedScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:fillViewport="true"-->
<!--                android:fitsSystemWindows="true"-->
<!--                app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_below="@id/balance_rel"
                    android:layout_above="@id/interact_rel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.viewpager.widget.ViewPager>
<!--            </androidx.core.widget.NestedScrollView>-->
<!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
        <LinearLayout

            android:id="@+id/interact_rel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"



            android:orientation="horizontal"
            android:weightSum="5"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            >
                <TextView
                    android:id="@+id/accept_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:layout_weight="2"
                    android:background="@drawable/rounded_color_green_9"
                    android:text="@string/accept"

                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.Medium"


                    android:gravity="top|center_horizontal"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:lines="1"

                    android:textStyle="bold"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
                <TextView
                    android:id="@+id/reject_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/reject"
                    android:layout_weight="2"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"

                    android:textAllCaps="true"
                    android:background="@drawable/rounded_color_red_9"


                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.Medium"


                    android:gravity="center_horizontal"


                    android:maxLines="1"/>




        </LinearLayout>

        <LinearLayout

            android:id="@+id/loading_state_lin"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:visibleGone="@{responseResource!=null}"
            android:layout_gravity="center_horizontal"

            >
            <include
                android:id="@+id/loading_state"
                layout="@layout/loading_state"

                app:resource="@{responseResource}"
                app:callback="@{ retryCallback}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

    </RelativeLayout></layout>